--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "virtual-assistant",
+  "name": "dynamic-portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -28,8 +28,8 @@
     "next-themes": "^0.4.4",
     "openai": "^4.77.0",
     "openai-edge": "^1.2.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.14.0",
     "react-particles": "^2.12.2",
