--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --legacy-peer-deps",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -33,7 +33,6 @@
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.14.0",
     "react-particles": "^2.12.2",
-    "react-speech-kit": "^3.0.1",
     "react-tsparticles": "^2.12.2",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
